--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0f172a" />
-    <title>Nebula Wallpaper Engine</title>
+    <title>Cosmic's Wallpaper Engine</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
