--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,13 +9,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
-              background: '#0f172a',
-              surface: '#1e293b',
+              background: 'var(--color-background)',
+              surface: 'var(--color-surface)',
               primary: '#6366f1',
               secondary: '#a855f7',
+              foreground: 'var(--color-foreground)',
+              muted: 'var(--color-muted)',
+              border: 'var(--color-border)',
             },
             animation: {
               'gradient-x': 'gradient-x 15s ease infinite',
@@ -37,27 +42,46 @@
       };
     </script>
     <style>
+      :root {
+        --color-background: #f8fafc;
+        --color-surface: #ffffff;
+        --color-foreground: #0f172a;
+        --color-muted: #64748b;
+        --color-border: rgba(0, 0, 0, 0.1);
+      }
+
+      .dark {
+        --color-background: #0f172a;
+        --color-surface: #1e293b;
+        --color-foreground: #f8fafc;
+        --color-muted: #94a3b8;
+        --color-border: rgba(255, 255, 255, 0.1);
+      }
+
       body {
         margin: 0;
         font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-        background-color: #0f172a;
-        color: #f8fafc;
-        overflow: hidden; /* App handles scrolling */
+        background-color: var(--color-background);
+        color: var(--color-foreground);
+        overflow: hidden;
+        transition: background-color 0.3s ease, color 0.3s ease;
       }
+
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
         width: 8px;
         height: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #1e293b; 
+        background: var(--color-surface); 
       }
       ::-webkit-scrollbar-thumb {
-        background: #475569; 
+        background: var(--color-muted); 
         border-radius: 4px;
+        opacity: 0.5;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #64748b; 
+        background: var(--color-primary); 
       }
     </style>
   <script type="importmap">
