--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             colors: {
               background: 'var(--color-background)',
               surface: 'var(--color-surface)',
-              primary: '#6366f1',
-              secondary: '#a855f7',
+              primary: 'var(--color-primary)',
+              secondary: 'var(--color-secondary)',
               foreground: 'var(--color-foreground)',
               muted: 'var(--color-muted)',
               border: 'var(--color-border)',
@@ -42,12 +42,14 @@
       };
     </script>
     <style>
-      :root {
-        --color-background: #f8fafc;
+      :root, .light {
+        --color-background: #f1f5f9;
         --color-surface: #ffffff;
-        --color-foreground: #0f172a;
-        --color-muted: #64748b;
-        --color-border: rgba(0, 0, 0, 0.1);
+        --color-foreground: #000000; /* Purest black for maximum contrast */
+        --color-muted: #0f172a; /* Extremely dark slate for visible secondary info */
+        --color-border: #94a3b8; /* Solid slate border for clear object boundaries */
+        --color-primary: #312e81; /* High-contrast Indigo-900 */
+        --color-secondary: #701a75; /* High-contrast Fuchsia-900 */
       }
 
       .dark {
@@ -56,6 +58,48 @@
         --color-foreground: #f8fafc;
         --color-muted: #94a3b8;
         --color-border: rgba(255, 255, 255, 0.1);
+        --color-primary: #818cf8;
+        --color-secondary: #c084fc;
+      }
+
+      .cosmic {
+        --color-background: #11001c;
+        --color-surface: #220135;
+        --color-foreground: #fef0ff;
+        --color-muted: #b185db;
+        --color-border: rgba(181, 133, 219, 0.2);
+        --color-primary: #ff00ff;
+        --color-secondary: #7b2cbf;
+      }
+
+      .sunset {
+        --color-background: #1a0b0b;
+        --color-surface: #2d1616;
+        --color-foreground: #fff5f5;
+        --color-muted: #fca5a5;
+        --color-border: rgba(252, 165, 165, 0.2);
+        --color-primary: #f87171;
+        --color-secondary: #fb923c;
+      }
+
+      .forest {
+        --color-background: #061109;
+        --color-surface: #0c2212;
+        --color-foreground: #f0fdf4;
+        --color-muted: #86efac;
+        --color-border: rgba(134, 239, 172, 0.2);
+        --color-primary: #22c55e;
+        --color-secondary: #10b981;
+      }
+
+      .cyber {
+        --color-background: #000000;
+        --color-surface: #0a0a0a;
+        --color-foreground: #00ffcc;
+        --color-muted: #008888;
+        --color-border: #00ffcc44;
+        --color-primary: #ff00cc;
+        --color-secondary: #00ffcc;
       }
 
       body {
@@ -64,7 +108,17 @@
         background-color: var(--color-background);
         color: var(--color-foreground);
         overflow: hidden;
-        transition: background-color 0.3s ease, color 0.3s ease;
+        transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+
+      /* Reduce Motion / Disable Animations */
+      .animations-disabled *,
+      .animations-disabled *::before,
+      .animations-disabled *::after {
+        animation-duration: 0.001ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.001ms !important;
+        animation-delay: 0ms !important;
       }
 
       /* Custom Scrollbar */
