--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       :root, .light {
         --color-background: #f1f5f9;
         --color-surface: #ffffff;
-        --color-foreground: #000000; /* Purest black for maximum contrast */
-        --color-muted: #0f172a; /* Extremely dark slate for visible secondary info */
-        --color-border: #94a3b8; /* Solid slate border for clear object boundaries */
-        --color-primary: #312e81; /* High-contrast Indigo-900 */
-        --color-secondary: #701a75; /* High-contrast Fuchsia-900 */
+        --color-foreground: #000000;
+        --color-muted: #0f172a;
+        --color-border: #94a3b8;
+        --color-primary: #312e81;
+        --color-secondary: #701a75;
       }
 
       .dark {
@@ -111,17 +111,18 @@
         transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
       }
 
-      /* Reduce Motion / Disable Animations */
+      .animations-disabled,
       .animations-disabled *,
       .animations-disabled *::before,
       .animations-disabled *::after {
-        animation-duration: 0.001ms !important;
+        animation-duration: 0s !important;
         animation-iteration-count: 1 !important;
-        transition-duration: 0.001ms !important;
-        animation-delay: 0ms !important;
+        transition-duration: 0s !important;
+        transition-delay: 0s !important;
+        animation-delay: 0s !important;
+        scroll-behavior: auto !important;
       }
 
-      /* Custom Scrollbar */
       ::-webkit-scrollbar {
         width: 8px;
         height: 8px;
@@ -138,19 +139,22 @@
         background: var(--color-primary); 
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0"
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
