--- a/index.html
+++ b/index.html
@@ -23,120 +23,161 @@
             },
             animation: {
               'gradient-x': 'gradient-x 15s ease infinite',
-              'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'pulse-slow': 'pulse 6s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'float': 'float 6s ease-in-out infinite',
+              'reveal': 'reveal 1.2s cubic-bezier(0.22, 1, 0.36, 1) forwards',
+              'scan': 'scan 3s linear infinite',
+              'glow-pulse': 'glow-pulse 2s ease-in-out infinite',
             },
             keyframes: {
               'gradient-x': {
-                '0%, 100%': {
-                  'background-size': '200% 200%',
-                  'background-position': 'left center',
-                },
-                '50%': {
-                  'background-size': '200% 200%',
-                  'background-position': 'right center',
-                },
+                '0%, 100%': { 'background-size': '200% 200%', 'background-position': 'left center' },
+                '50%': { 'background-size': '200% 200%', 'background-position': 'right center' },
               },
+              'float': {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-10px)' },
+              },
+              'reveal': {
+                '0%': { opacity: '0', filter: 'blur(20px)', transform: 'scale(1.05)' },
+                '100%': { opacity: '1', filter: 'blur(0)', transform: 'scale(1)' },
+              },
+              'scan': {
+                '0%': { left: '-100%' },
+                '100%': { left: '200%' },
+              },
+              'glow-pulse': {
+                '0%, 100%': { 'box-shadow': '0 0 20px var(--color-primary)' },
+                '50%': { 'box-shadow': '0 0 40px var(--color-primary)' },
+              }
             },
           },
         },
       };
     </script>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap');
+
       :root, .light {
-        --color-background: #f1f5f9;
-        --color-surface: #ffffff;
-        --color-foreground: #000000;
-        --color-muted: #0f172a;
-        --color-border: #94a3b8;
-        --color-primary: #312e81;
-        --color-secondary: #701a75;
+        --color-background: #f8fafc;
+        --color-surface: rgba(255, 255, 255, 0.85);
+        --color-foreground: #0f172a;
+        --color-muted: #64748b;
+        --color-border: rgba(15, 23, 42, 0.08);
+        --color-primary: #4f46e5;
+        --color-secondary: #9333ea;
       }
 
       .dark {
-        --color-background: #0f172a;
-        --color-surface: #1e293b;
+        --color-background: #020617;
+        --color-surface: rgba(15, 23, 42, 0.7);
         --color-foreground: #f8fafc;
         --color-muted: #94a3b8;
-        --color-border: rgba(255, 255, 255, 0.1);
+        --color-border: rgba(255, 255, 255, 0.06);
         --color-primary: #818cf8;
         --color-secondary: #c084fc;
       }
 
       .cosmic {
-        --color-background: #11001c;
-        --color-surface: #220135;
-        --color-foreground: #fef0ff;
-        --color-muted: #b185db;
-        --color-border: rgba(181, 133, 219, 0.2);
-        --color-primary: #ff00ff;
-        --color-secondary: #7b2cbf;
+        --color-background: #0f011d;
+        --color-surface: rgba(30, 10, 60, 0.7);
+        --color-foreground: #f5f3ff;
+        --color-muted: #a78bfa;
+        --color-border: rgba(139, 92, 246, 0.12);
+        --color-primary: #d946ef;
+        --color-secondary: #8b5cf6;
       }
 
       .sunset {
-        --color-background: #1a0b0b;
-        --color-surface: #2d1616;
-        --color-foreground: #fff5f5;
-        --color-muted: #fca5a5;
-        --color-border: rgba(252, 165, 165, 0.2);
-        --color-primary: #f87171;
-        --color-secondary: #fb923c;
+        --color-background: #1a0a01;
+        --color-surface: rgba(45, 10, 0, 0.75);
+        --color-foreground: #fff7ed;
+        --color-muted: #fdba74;
+        --color-border: rgba(249, 115, 22, 0.12);
+        --color-primary: #f97316;
+        --color-secondary: #f43f5e;
       }
 
       .forest {
-        --color-background: #061109;
-        --color-surface: #0c2212;
+        --color-background: #020a05;
+        --color-surface: rgba(10, 30, 15, 0.75);
         --color-foreground: #f0fdf4;
         --color-muted: #86efac;
-        --color-border: rgba(134, 239, 172, 0.2);
+        --color-border: rgba(34, 197, 94, 0.12);
         --color-primary: #22c55e;
-        --color-secondary: #10b981;
+        --color-secondary: #84cc16;
       }
 
       .cyber {
         --color-background: #000000;
-        --color-surface: #0a0a0a;
-        --color-foreground: #00ffcc;
-        --color-muted: #008888;
-        --color-border: #00ffcc44;
-        --color-primary: #ff00cc;
-        --color-secondary: #00ffcc;
+        --color-surface: rgba(10, 10, 10, 0.9);
+        --color-foreground: #e0f2fe;
+        --color-muted: #38bdf8;
+        --color-border: rgba(6, 182, 212, 0.15);
+        --color-primary: #06b6d4;
+        --color-secondary: #f472b6;
       }
 
       body {
         margin: 0;
-        font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+        font-family: 'Plus Jakarta Sans', sans-serif;
         background-color: var(--color-background);
         color: var(--color-foreground);
         overflow: hidden;
-        transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 0.8s cubic-bezier(0.4, 0, 0.2, 1);
       }
 
-      .animations-disabled,
-      .animations-disabled *,
-      .animations-disabled *::before,
-      .animations-disabled *::after {
-        animation-duration: 0s !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0s !important;
-        transition-delay: 0s !important;
-        animation-delay: 0s !important;
-        scroll-behavior: auto !important;
+      .glass-panel {
+        backdrop-filter: blur(var(--ui-blur, 32px)) saturate(180%);
+        border: 1px solid var(--color-border);
+        box-shadow: 
+          0 4px 6px -1px rgba(0, 0, 0, 0.1),
+          0 2px 4px -1px rgba(0, 0, 0, 0.06),
+          inset 0 0 20px 0 rgba(255, 255, 255, 0.05);
       }
 
-      ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+      .animations-disabled, .animations-disabled * {
+        animation: none !important;
+        transition: none !important;
       }
-      ::-webkit-scrollbar-track {
-        background: var(--color-surface); 
-      }
+
+      ::-webkit-scrollbar { width: 4px; height: 4px; }
+      ::-webkit-scrollbar-track { background: transparent; }
       ::-webkit-scrollbar-thumb {
         background: var(--color-muted); 
-        border-radius: 4px;
-        opacity: 0.5;
+        border-radius: 10px;
+        opacity: 0.1;
       }
-      ::-webkit-scrollbar-thumb:hover {
-        background: var(--color-primary); 
+      ::-webkit-scrollbar-thumb:hover { background: var(--color-primary); }
+
+      .star-field {
+        background-image: radial-gradient(circle at 1px 1px, rgba(255,255,255,0.03) 1px, transparent 0);
+        background-size: 50px 50px;
+        position: relative;
+      }
+
+      .star-field::before {
+        content: '';
+        position: absolute;
+        inset: 0;
+        background: radial-gradient(circle at 50% 50%, var(--color-primary), transparent 60%);
+        opacity: 0.03;
+        pointer-events: none;
+      }
+
+      .btn-magnetic {
+        transition: transform 0.3s cubic-bezier(0.33, 1, 0.68, 1);
+      }
+      .btn-magnetic:hover {
+        transform: translateY(-2px) scale(1.02);
+      }
+
+      input::placeholder {
+        transition: color 0.3s ease;
+      }
+      input:focus::placeholder {
+        color: var(--color-primary);
+        opacity: 0.5;
       }
     </style>
     <script type="importmap">
@@ -154,7 +195,7 @@
 </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="star-field h-full w-full"></div>
     <script type="module" src="index.tsx"></script>
   </body>
 </html>
